[package]
edition = "2021"
name = "zones-provider"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
parse-zoneinfo = "0.3"
regex = "1.10"
reqwest = "0.11"
tar = "0.4"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
