[package]
edition = "2021"
name = "zones-provider"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.1"
parse-zoneinfo = "0.5"
regex = "1.12"
reqwest = "0.13"
tar = "0.4"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
